# Bose-Fermi

./: .gitignore  README.md  pyproject.toml
bosefermi/: __init__.py  analyzers.py  core.py  patterns.py  special_functions.py  validators.py
examples/: blackbody.py  example_usage.py  gas.py  white_dwarf.py
tests/: test_bosefermi.py  test_sanity.py
