[project]
name = "bosefermi"
version = "0.1.0"
description = "Evaluator of definite Bose-Einstein and Fermi-Dirac type integrals using SymPy"
authors = [
    { name = "Oldřich Klimánek", email = "oldrich.klimanek@gmail.com" }
]
license = "MIT"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pytest>=8.3.5",
    "scipy>=1.10.1",
    "sympy>=1.12",
]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipython>=8.12.3",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.8",
]
